test/sema/member_expr_type_shadowed.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:9: error: redeclaration of 'S'
    let S = S{x: 0};

    // CHECK: [[# @LINE + 1 ]]:14: error: expected an instance of 'S'
    let x = S.x;
}